force-app/main/default/objects/Data_Source__c/Data_Source__c.object-meta.xml
<CustomObject>
    <label>Data Source</label>
    <nameField>
        <label>Data Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>