force-app/main/default/objects/Data_Source__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <label>Host</label>
    <length>250</length>
    <type>Text</type>
</CustomField>