force-app/main/default/objects/Data_Source__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <label>Instance</label>
    <length>30</length>
    <type>Text</type>
</CustomField>