force-app/main/default/objects/Data_Source__c/fields/Port__c.field-meta.xml
<CustomField>
    <fullName>Port__c</fullName>
    <label>Port</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>