force-app/main/default/objects/Data_Source__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>PostgreSQL</fullName>
            </value>
            <value>
                <fullName>Redshift</fullName>
            </value>
            <value>
                <fullName>Informatica EDC - Oracle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>